<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/round_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_subtitle_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_login" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:id="@+id/tv_title_login"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_back"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buat_akun_baru_dulu_baru_cekot_makanan"
        android:id="@+id/tv_subtitle_login"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/tv_title_name"
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle_login"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_title_name"
        android:hint="@string/huruf_alfabet_tanpa_emoji_simbol"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/tv_title_email"
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@id/tv_title_email"
        android:hint="@string/cth_nama_email_com"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/tv_title_password"
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password"
        android:hint="@string/berupa_huruf_angka"/>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_next"
        android:backgroundTint="#4ca735"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>