<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/round_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_subtitle_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_login" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/tv_title_login"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_back"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lengkapi_alamat_kamu_buat_lanjut_daftar_akunnya"
        android:id="@+id/tv_subtitle_login"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:id="@+id/tv_title_phone_number"
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle_login"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_phone_number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/tv_title_phone_number"
        android:hint="@string/_08xxxxxxxxxx"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_form"
        android:id="@+id/tv_title_address"
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_address"
        app:layout_constraintTop_toBottomOf="@id/tv_title_address"
        android:hint="@string/alamat_kamu"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_number"
        android:id="@+id/tv_title_house_number"
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/et_address"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_house_number"
        app:layout_constraintTop_toBottomOf="@id/tv_title_house_number"
        android:hint="@string/nomor_rumah_kamu"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:id="@+id/tv_title_city"
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/et_house_number"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        app:boxCornerRadiusTopStart="24dp"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:hintEnabled="false"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_city">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/sp_city"
            android:hint="@string/pilih_kota"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_register"
        android:backgroundTint="#4ca735"
        android:text="@string/register_now"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>