<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ui.LoginActivity"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/tv_title_login"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kalo_udah_punya_akun_langsung_masuk_aja_gan"
        android:id="@+id/tv_subtitle_login"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login"/>

    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/email"
       android:id="@+id/tv_title_email"
       android:paddingStart="3dp"
       android:paddingEnd="0dp"
       app:layout_constraintTop_toBottomOf="@id/tv_subtitle_login"
       android:layout_marginTop="64dp"
       app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@id/tv_title_email"
        android:hint="@string/cth_nama_email_com"/>

    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/password"
       android:id="@+id/tv_title_password"
       android:paddingStart="3dp"
       android:paddingEnd="0dp"
       app:layout_constraintTop_toBottomOf="@id/et_email"
       android:layout_marginTop="16dp"
       app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password"
        android:hint="@string/berupa_huruf_angka"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_login"
        android:backgroundTint="#4ca735"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/bt_register"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_register"
        android:backgroundTint="@color/white"
        android:text="@string/Register"
        android:textColor="#4ca735"
        app:strokeColor="#4ca735"
        app:strokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>